force-app/main/default/objects/Billing_Schedule__c/Billing_Schedule__c.object-meta.xml
<CustomObject>
    <description>RUBX-1442 Billing schedule will define all billing terms and schedules</description>
    <label>Billing Schedule</label>
    <nameField>
        <displayFormat>BS-{00000}</displayFormat>
        <label>Billing Schedule</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>