force-app/main/default/objects/Billing_Schedule__c/fields/Billing_Term__c.field-meta.xml
<CustomField>
    <fullName>Billing_Term__c</fullName>
    <label>Billing Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing Term - 1</fullName>
            </value>
            <value>
                <fullName>Billing Term - 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>