force-app/main/default/objects/Billing_Schedule__c/fields/ProdType__c.field-meta.xml
<CustomField>
    <fullName>ProdType__c</fullName>
    <description>RUBX-1441 Add prod type to billing schedule</description>
    <label>ProdType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>